--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 
 <!DOCTYPE html>
 <html lang="tr">
-Loading Taraftarium24...
+<head>
+<meta http-equiv="Refresh" content="2; url='https://x.com/taraftarium24x'" />
+</head>
+Loading...
 </html>
