--- a/channel.html
+++ b/channel.html
@@ -104,7 +104,7 @@ window.config = {
   		mediacontrol: {seekbar: "#181929"},
   		plugins: [ChromecastPlugin],
         poster: "https://cdsnnt.pages.dev/load.gif",
-        watermark: "cdsnnt.pages.dev/t244.png",
+        watermark: "//cdsnnt.pages.dev/t244.png",
         watermarkLink: "https://twitter.com/taraftarium24x",
         width: '100%',
         height: '400'
