--- a/channel.html
+++ b/channel.html
@@ -8,7 +8,7 @@ body {
 
 .player-poster[data-poster].clickable {
     background-size: contain;
-    background-image: url("cdsnnt.pages.dev/load.gif");
+    background-image: url("//cdsnnt.pages.dev/load.gif");
 }
 </style>
 
@@ -103,7 +103,7 @@ window.config = {
         mimeType: "application/x-mpegURL",
   		mediacontrol: {seekbar: "#181929"},
   		plugins: [ChromecastPlugin],
-        poster: "https://cdsnnt.pages.dev/load.gif",
+        poster: "//cdsnnt.pages.dev/load.gif",
         watermark: "//cdsnnt.pages.dev/t244.png",
         watermarkLink: "https://twitter.com/taraftarium24x",
         width: '100%',
