--- a/channel.html
+++ b/channel.html
@@ -48,7 +48,7 @@ var cid = url.searchParams.get("id");
 var ctitle = url.searchParams.get("title");
 var adsSrc = Array("https://raw.githubusercontent.com/cdntrgoalsmp4/host/main/video.mp4");
 var adsLink = Array("https://twitter.com/taraftarium24x");
-var baseurl = "https://saglam.trgoals501.xyz/";
+var baseurl = "https://kalca.trgoals502.xyz/";
 var kanalurl = {
     1: "yayinstar.m3u8",
     2: "yayinb2.m3u8",
