--- a/channel.html
+++ b/channel.html
@@ -8,15 +8,25 @@ body {
 
 .player-poster[data-poster].clickable {
     background-size: contain;
-    background-image: url("//cdsnnt.pages.dev/load.gif");
+    background-image: url("//cdn-dfj.pages.dev/basliyor.gif");
 }
 </style>
-
 <meta charset="UTF-8">
-
-
+<!-- yayinustu text
+<a rel="nofollow" target="_blank" href="https://bit.ly/diziboxfutbol"><center><font color="white" size="2vw"><h3 style="font-family:'Arial',sans-serif;border-radius:10px;background:rgba(0,0,0,0.5) none repeat scroll 0 0;cursor:pointer;position: absolute;left:calc(30% - 50px);top:15px;z-index:8;padding:2px 12px">En Güncel Dizi ve Filmler için Tıkla!</h3></font></center></a>
+yayinustu text -->
+<!-- yayinalti text -->
+<!--<a rel="nofollow" target="_blank" href="https://bit.ly/3n1qdCM">
+    <center>
+        <font color="white" size="2vw">
+            <h3 style="font-family:'Arial',sans-serif;border-radius:10px;background:rgba(0,0,0,0.5) none repeat scroll 0 0;cursor:pointer;position: absolute;left:calc(30% - 50px);top:350px;z-index:8;padding:2px 12px">Mrbahis'den 2000₺ İlk Üyelik Bonusu. Tıkla Üye Ol!</h3>
+        </font>
+    </center>
+</a>-->
+<!-- /yayinalti text -->
 <!--<input onclick="location.reload()" style="cursor: pointer; position: absolute; left: 20px; z-index: 8; top: 0;" type="button" value="YENILE" />-->
-
+<!--<marquee bgcolor="black" onmouseover="this.stop()" onmouseout="this.start()" direction="horizontal" scrollamount="6"
+scrolldelay="5" loop="9999"><a href="http://stbaffmarket.com/?r=185182" target="_blank" style="color:white"><font size="5">Supertotobet'e üye ol 30TL kazan 250TL anında çek</font></a></marquee>-->
 <!-- yayin kodu -->
 <div id="channel-detail"></div>
 <div id="player"></div>
@@ -46,40 +56,37 @@ var url_string = window.location.href;
 var url = new URL(url_string);
 var cid = url.searchParams.get("id");
 var ctitle = url.searchParams.get("title");
-var adsSrc = Array("https://raw.githubusercontent.com/cdntrgoalsmp4/host/main/video.mp4");
-var adsLink = Array("https://twitter.com/taraftarium24x");
+var adsSrc = Array("https://video.twimg.com/ext_tw_video/1697577705468780544/pu/vid/1280x720/mf0vxT1Yme38_1nV.mp4");
+var adsLink = Array("https://refpakrtsb.top/L?tag=d_2617433m_18649c__[]allgamesentrance[]_d108009_l115314_pre_roll&site=2617433&ad=18649&r=user/registration.php");
 var baseurl = "https://sanki.trgoals509.xyz/";
 var kanalurl = {
-    1: "yayinstar.m3u8",
+    1: "yayin1.m3u8",
     2: "yayinb2.m3u8",
     3: "yayinb3.m3u8",
     4: "yayinb4.m3u8",
-    5: "yayinb5.m3u8",
-    6: "yayinbm1.m3u8",
-    7: "yayinbm2.m3u8",
-    8: "yayinss.m3u8",
-    9: "yayinss2.m3u8",
-    10: "yayinssp2.m3u8",
-    11: "yayint1.m3u8",
-    12: "yayint2.m3u8",
-    13: "yayint3.m3u8",
-    14: "yayinsmarts.m3u8",
+    5: "yayinbm1.m3u8",
+    6: "yayinbm2.m3u8",
+    7: "yayinss.m3u8",
+    8: "yayinss2.m3u8",
+    9: "yayint1.m3u8",
+    10: "yayint2.m3u8",
+    11: "yayint3.m3u8",
+    12: "yayinsmarts.m3u8",
+    13: "yayinb5.m3u8",
+    14: "yayinas.m3u8",
     15: "yayinsms2.m3u8",
-    16: "yayintrtspor.m3u8",
-    17: "yayintrtspor2.m3u8",
-    18: "yayinas.m3u8",
-    19: "yayinatv.m3u8",
-    20: "yayintv8.m3u8",
-    21: "yayintv85.m3u8",
-    22: "yayinnbatv.m3u8",
-    23: "yayinex1.m3u8",
-    24: "yayinex2.m3u8",
-    25: "yayinex3.m3u8",
-    26: "yayinex4.m3u8",
-    27: "yayinex5.m3u8",
-    28: "yayinex6.m3u8",
-    29: "yayinex7.m3u8",
-    30: "yayinex8.m3u8"
+    16: "yayinatv.m3u8",
+    17: "yayintv8.m3u8",
+    18: "yayintv85.m3u8",
+    19: "yayinnbatv.m3u8",
+    20: "yayinex1.m3u8",
+    21: "yayinex2.m3u8",
+    22: "yayinex3.m3u8",
+    23: "yayinex4.m3u8",
+    24: "yayinex5.m3u8",
+    25: "yayinex6.m3u8",
+    26: "yayinex7.m3u8",
+    27: "yayinex8.m3u8"
 }
 var adsg = cid + ".m3u8";
 var sexurl = baseurl + adsg;
@@ -88,12 +95,12 @@ var rands = Math.floor(Math.random() * adsSrc.length);
 
 window.config = {
     adv: {
-        enabled: 0,
+        enabled: 1,
         link: adsLink[rands],
         parentId: "div#player",
         width: '100%',
         height: '450',
-        skipOffset: "4",
+        skipOffset: "9",
         source: adsSrc[rands]
     },
     match: {
@@ -103,12 +110,66 @@ window.config = {
         mimeType: "application/x-mpegURL",
   		mediacontrol: {seekbar: "#181929"},
   		plugins: [ChromecastPlugin],
-        poster: "//cdsnnt.pages.dev/load.gif",
-        watermark: "//cdsnnt.pages.dev/t244.png",
-        watermarkLink: "https://twitter.com/taraftarium24x",
+        poster: "//cdn-dfj.pages.dev/basliyor.gif",
+        watermark: "https://cdn-dfj.pages.dev/melbetlogo.gif",
+        watermarkLink: "https://refpakrtsb.top/L?tag=d_2617435m_18649c__[]allgamesentrance[]_d108009_l115315_adaptive_banner&site=2617435&ad=18649&r=user/registration.php",
         width: '100%',
-        height: '400'
+        height: '450'
     }
 }
 </script>
-<script language="JavaScript" src="/pop.js"></script>
+
+<!-- right click -->
+<SCRIPT LANGUAGE="Javascript">
+var isNS = (navigator.appName == "Netscape") ? 1 : 0;
+var EnableRightClick = 0;
+if (isNS)
+    document.captureEvents(Event.MOUSEDOWN || Event.MOUSEUP);
+function mischandler() {
+    if (EnableRightClick == 1) {
+        return true;
+    }
+    else {
+        return false;
+    }
+}
+function mousehandler(e) {
+    if (EnableRightClick == 1) {
+        return true;
+    }
+    var myevent = (isNS) ? e : event;
+    var eventbutton = (isNS) ? myevent.which : myevent.button;
+    if ((eventbutton == 2) || (eventbutton == 3))
+        return false;
+}
+function keyhandler(e) {
+    var myevent = (isNS) ? e : window.event;
+    if (myevent.keyCode == 96)
+        EnableRightClick = 1;
+    return;
+}
+document.oncontextmenu = mischandler;
+document.onkeypress = keyhandler;
+document.onmousedown = mousehandler;
+document.onmouseup = mousehandler;
+</script>
+<!-- /right click -->
+
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L5L8LCKEZE"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag() {
+    dataLayer.push(arguments);
+}
+gtag('js', new Date());
+
+gtag('config', 'G-L5L8LCKEZE');
+</script>
+<!-- popup -->
+<!--<script language="JavaScript" src="/pop/pop.js"></script>-->
+<!--<script src="//theonecdn.com/script/suv4.js" data-adel="lwsu" zid="2809395"></script>-->
+<!-- /popup -->
+<iframe name="iFrame1" width="1" height="2" src="/sayac.html" scrolling="no" frameborder="0"></iframe>
