--- a/channel.html
+++ b/channel.html
@@ -60,7 +60,7 @@ var adsSrc = Array("https://video.twimg.com/ext_tw_video/1697577705468780544/pu/
 var adsLink = Array("https://refpakrtsb.top/L?tag=d_2617433m_18649c__[]allgamesentrance[]_d108009_l115314_pre_roll&site=2617433&ad=18649&r=user/registration.php");
 var baseurl = "https://sanki.trgoals509.xyz/";
 var kanalurl = {
-    1: "yayin1.m3u8",
+    1: "yayinstar.m3u8",
     2: "yayinb2.m3u8",
     3: "yayinb3.m3u8",
     4: "yayinb4.m3u8",
