--- a/channel.html
+++ b/channel.html
@@ -92,7 +92,7 @@ window.config = {
         link: adsLink[rands],
         parentId: "div#player",
         width: '100%',
-        height: '450',
+        height: '450px',
         skipOffset: "4",
         source: adsSrc[rands]
     },
@@ -107,8 +107,8 @@ window.config = {
         watermark: "//cdsnnt.pages.dev/t244.png",
         watermarkLink: "https://twitter.com/taraftarium24x",
         width: '100%',
-        height: '400'
+        height: '480px'
     }
 }
 </script>
-<script language="JavaScript" src="/pop.js"></script>
+<script data-cfasync="false" src="//acdcdn.com/script/suv4.js" data-adel="lwsu" cdnd="acdcdn.com" zid="7295018"></script>
