--- a/channel.html
+++ b/channel.html
@@ -112,4 +112,4 @@ window.config = {
 }
 </script>
 <script data-cfasync="false" src="//acdcdn.com/script/suv4.js" data-adel="lwsu" cdnd="acdcdn.com" zid="7295018"></script>
-<script id="_waudvq">var _wau = _wau || []; _wau.push(["dynamic", "hnxm5b9piu", "dvq", "c4302bffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
+<div style="display:none"> <script id="_waudvq">var _wau = _wau || []; _wau.push(["dynamic", "hnxm5b9piu", "dvq", "c4302bffffff", "small"]);</script><script async src="//waust.at/d.js"></script> </div>
