--- a/channel.html
+++ b/channel.html
@@ -16,7 +16,8 @@ body {
 
 
 <!--<input onclick="location.reload()" style="cursor: pointer; position: absolute; left: 20px; z-index: 8; top: 0;" type="button" value="YENILE" />-->
-
+<marquee bgcolor="black" onmouseover="this.stop()" onmouseout="this.start()" direction="horizontal" scrollamount="6"
+scrolldelay="5" loop="9999"><a href="http://stbaffmarket.com/?r=185182" target="_blank" style="color:white"><font size="5">Supertotobet'e üye ol 30TL kazan 250TL anında çek</font></a></marquee>
 <!-- yayin kodu -->
 <div id="channel-detail"></div>
 <div id="player"></div>
