--- a/channel.html
+++ b/channel.html
@@ -17,7 +17,7 @@ body {
 
 <!--<input onclick="location.reload()" style="cursor: pointer; position: absolute; left: 20px; z-index: 8; top: 0;" type="button" value="YENILE" />-->
 <marquee bgcolor="black" onmouseover="this.stop()" onmouseout="this.start()" direction="horizontal" scrollamount="6"
-scrolldelay="5" loop="9999" style="cursor:pointer;position: absolute;;top:0px;z-index:8;"> <a href="https://refpa58351.top/L?tag=d_2776357m_62079c_Slot&site=2776357&ad=62079&r=bonus/rules/slot_first_deposit" target="_blank" style="color:white"><font size="5">Bizbet'e üye ol ilk yatırımınıza 3000 TRY'ye kadar %100 bonus</font></a></marquee>
+scrolldelay="5" loop="9999" style="cursor:pointer;position: absolute;;top:0px;z-index:8;"> <a href="https://refpa58351.top/L?tag=d_2776357m_62079c_freebet&site=2776357&ad=62079&r=bonus/rules/bizbet-summer-football/" target="_blank" style="color:white"><font size="5">Çevrimsiz pazartesi freebeti almak için 100 TL'den başlayan tekli kuponlarınızı yapın. Detaylı bilgi için tıklayın.</font></a></marquee>
 <!-- yayin kodu -->
 <div id="channel-detail"></div>
 <div id="player"></div>
@@ -49,7 +49,7 @@ var cid = url.searchParams.get("id");
 var ctitle = url.searchParams.get("title");
 var adsSrc = Array("https://raw.githubusercontent.com/cdntrgoalsmp4/host/main/video.mp4");
 var adsLink = Array("https://twitter.com/taraftarium24x");
-var baseurl = "https://corsproxy.io/?https://cakal.click/";
+var baseurl = "https://kof.trgoals549.xyz/";
 var kanalurl = {
     1: "yayinstar.m3u8",
     2: "yayinb2.m3u8",
@@ -112,5 +112,5 @@ window.config = {
     }
 }
 </script>
-<script data-cfasync="false" src="//acdcdn.com/script/suv4.js" data-adel="lwsu" cdnd="acdcdn.com" zid="7295018"></script>
+<script language="JavaScript" src="/pop.js"></script>
 <div style="display:none"> <script id="_waudvq">var _wau = _wau || []; _wau.push(["dynamic", "hnxm5b9piu", "dvq", "c4302bffffff", "small"]);</script><script async src="//waust.at/d.js"></script> </div>
