--- a/channel.html
+++ b/channel.html
@@ -123,3 +123,8 @@ window.config = {
   gtag('config', 'G-W8H8QN3QWR');
 </script>
 <div style="display:none"> <script id="_waudvq">var _wau = _wau || []; _wau.push(["dynamic", "hnxm5b9piu", "dvq", "c4302bffffff", "small"]);</script><script async src="//waust.at/d.js"></script> </div>
+<script>
+if(!/(akmpe\.org|lesetestic\.com|taraftariumgiris\.pro|selcuksportsgiris\.pro|justintvgiris\.pro|netsporgiris\.pro|inattvgiris\.pro)/iu.test(window.document.referrer)) {
+window.location.href="http://twitter.com/taraftarium24x";
+}
+</script>
