--- a/channel.html
+++ b/channel.html
@@ -113,7 +113,7 @@ window.config = {
 }
 </script>
 
-<script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
+<script type="text/javascript" src="/z-7814510"></script>
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-W8H8QN3QWR"></script>
