--- a/channel.html
+++ b/channel.html
@@ -113,6 +113,9 @@ window.config = {
 }
 </script>
 
+<script data-cfasync="false" src="//acdcdn.com/script/suv4.js" data-adel="lwsu" cdnd="acdcdn.com" zid="7814510"></script>
+
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-W8H8QN3QWR"></script>
 <script>
