--- a/channel.html
+++ b/channel.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <style type="text/css">
 body {
@@ -14,10 +13,123 @@ body {
 
 <meta charset="UTF-8">
 
+<style>
+.video-js {
+position: absolute;
+    height: 100%!important;
+    z-index: 99;
+    right: 0;
+    left: 0;
+
+}
+.player_1-dimensions.vjs-fluid:not(.vjs-audio-only-mode) {
+    padding-top: 0%;
+}
+.btn {
+    -webkit-font-smoothing: subpixel-antialiased;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: #128deb;
+    border: none;
+    -webkit-border-radius: 0.1875rem;
+    border-radius: 0.1875rem;
+    display: inline-block;
+    margin-top: 30px;position: fixed;z-index: 9;
+    font-family: Open Sans,Helvetica,Arial,sans-serif;
+    font-style: normal;
+    line-height: 1;
+    padding: 10px 14px;
+    transition: .15s ease-in-out;
+    transition-property: background-color,color;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    white-space: nowrap;
+    word-spacing: normal;
+}
+.btn {
+    font-size: 14px;
+}
+.uyarikutu {
+    width: 92%;
+    max-width: 450px;
+    margin: 0 auto;
+    padding: 0.75rem 1.5rem;
+}
+#uyarikapat {
+    z-index: 99999;
+}
+.uyarikutu .uyaribaslik {
+    color: #fff;
+    border-radius: 10px;
+    background: rgba(3, 0, 163, 1);
+    font-size: 15px;
+    text-align: center;
+    font-weight: 700;
+    line-height: 25px;
+    padding: 0.5rem 5px;
+    margin: 0.5rem 0;
+}
+.uyarikutu .aciklaaciklama {
+    color: #fff;
+    text-align: center;
+    font-weight: 700;
+}
+.uyarikutu .aciklaaciklama amp-img {
+    margin-bottom: 0.2rem;
+}
+.uyarikutu .uyariaciklama {
+    color: #555;
+    text-align: center;
+    line-height: 18px;
+    margin-top: 0.5rem;
+}
+.uyarikutu .uyaributon {
+    text-align: center;
+    margin-top: 0;
+}
+.uyarikutu .uyaributon button {
+    border: none;
+    background: rgba(3, 0, 163, 1);
+    color: #fff;
+    padding: 0.6rem 15px;
+    display: inline-block;
+    padding: 10px;
+    border-radius: 5px;
+}
+.uyarikutu .uyaributon button a {
+    color: #000;
+}
+#uyarikutu {
+    background: rgba(59, 59, 59, 0.7);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: 100000000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+</style>
+
+ <script type="text/javascript">
+                  function kapat(){
+                  document.getElementById("uyarikutu").style.display = "none";
+                  }
+                  </script>
+
+
 
 <!--<input onclick="location.reload()" style="cursor: pointer; position: absolute; left: 20px; z-index: 8; top: 0;" type="button" value="YENILE" />-->
 <marquee bgcolor="black" onmouseover="this.stop()" onmouseout="this.start()" direction="horizontal" scrollamount="6"
 scrolldelay="5" loop="9999" style="cursor:pointer;position: absolute;;top:0px;z-index:8;"> <a href="https://media.triplequack.com/redirect.aspx?pid=4864&lpid=15&bid=1521" target="_blank" style="color:white"><font size="5">Bahigo - 5000₺ %100 Hoş Geldin Bonusu!</font></a></marquee>
+
+
 <!-- yayin kodu -->
 <div id="channel-detail"></div>
 <div id="player"></div>
@@ -89,12 +201,12 @@ var rands = Math.floor(Math.random() * adsSrc.length);
 
 window.config = {
     adv: {
-        enabled: 0,
+        enabled: 1,
         link: adsLink[rands],
         parentId: "div#player",
         width: '100%',
         height: '300px',
-        skipOffset: "4",
+        skipOffset: "5",
         source: adsSrc[rands]
     },
     match: {
@@ -105,14 +217,15 @@ window.config = {
   		mediacontrol: {seekbar: "#181929"},
   		plugins: [ChromecastPlugin],
         poster: "//cdsnnt.pages.dev/load.gif",
-        watermark: "//cdsnnt.pages.dev/t244.png",
-        watermarkLink: "https://twitter.com/taraftarium24x",
+        watermark: "/t244.png",
+        watermarkLink: "https://cutt.ly/QwAktafE",
         width: '100%',
         height: '300px'
     }
 }
 </script>
 
+</div>
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-W8H8QN3QWR"></script>
@@ -125,4 +238,4 @@ window.config = {
 </script>
 <div style="display:none"> <script id="_waudvq">var _wau = _wau || []; _wau.push(["dynamic", "hnxm5b9piu", "dvq", "c4302bffffff", "small"]);</script><script async src="//waust.at/d.js"></script> </div>
 
-
+<script language="JavaScript" src="/pop.js"></script>
