--- a/channel.html
+++ b/channel.html
@@ -228,13 +228,13 @@ window.config = {
 </div>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-W8H8QN3QWR"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q8Y01R2B3P"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-W8H8QN3QWR');
+  gtag('config', 'G-Q8Y01R2B3P');
 </script>
 <div style="display:none"> <script id="_waudvq">var _wau = _wau || []; _wau.push(["dynamic", "hnxm5b9piu", "dvq", "c4302bffffff", "small"]);</script><script async src="//waust.at/d.js"></script> </div>
 
