--- a/channel.html
+++ b/channel.html
@@ -127,7 +127,7 @@ position: absolute;
 
 <!--<input onclick="location.reload()" style="cursor: pointer; position: absolute; left: 20px; z-index: 8; top: 0;" type="button" value="YENILE" />-->
 <marquee bgcolor="black" onmouseover="this.stop()" onmouseout="this.start()" direction="horizontal" scrollamount="6"
-scrolldelay="5" loop="9999" style="cursor:pointer;position: absolute;;top:0px;z-index:8;"> <a href="/" target="_blank" style="color:white"><font size="5">/</font></a></marquee>
+scrolldelay="5" loop="9999" style="cursor:pointer;position: absolute;;top:0px;z-index:8;"> <a href="/" target="_blank" style="color:white"><font size="5">Reklam Alani</font></a></marquee>
 
 
 <!-- yayin kodu -->
